Add per-job JVM options for legacy app compatibility